# lab_agent_rag

./: .env.example  .gitignore  README.md  SETUP_COMPLETE.md  apply_schema.py  apply_schema_cli.py  pyproject.toml  run_sql.sh  setup.sh  setup_db.py
app/: config.py  main.py  retrieval.py  schemas.py  supabase_client.py
ingestion/: chunker.py  ingest_service.py
sql/: schema.sql
static/: index.html
workers/: index_worker.py
