[project]
name = "lab-agent-rag"
version = "0.1.0"
description = "Supabase-backed retrieval-augmented generation service"
authors = [{name = "OpenAI Lab Agent"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
    "python-multipart~=0.0",
    "supabase~=2.5",
    "docling~=1.7",
    "pandas~=2.2",
    "numpy~=1.26",
    "pgvector~=0.2.4",
    "pydantic-settings~=2.3",
    "httpx~=0.27",
    "tenacity~=8.2",
    "sentence-transformers~=2.7",
    "orjson~=3.10"
]

[project.optional-dependencies]
dev = ["pytest~=8.2", "anyio~=4.4"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*", "workers*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["app", "ingestion", "workers"]
